--- a/ET-level-1/index.html
+++ b/ET-level-1/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <title>ET Finder</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="static/css/style.css">
+
+  <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 
 <body>
@@ -75,5 +78,7 @@
   <script src="static/js/data.js"></script>
   <script src="static/js/app.js"></script>
 </body>
+<script src="static/js/data.js"></script>
+<script src="static/js/app.js"></script>
 
 </html>
